k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-first-own-deployment
  labels:
    app: go-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-web-app
  template:
    metadata:
      labels:
        app: go-web-app
    spec:
      containers:
      - name: go-web-app
        image: pandiyan0/sarguna:v1 #docker-username/repo namego-web-app:1.14.2
        ports:
        - containerPort: 8080 #mention what port has exposed in the docker file
