k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-app
spec:
  ingressClassName: ngnix #IngressClassName Used for which Ingress controller have to be identified, if multiple ingress controller means so
  rules:
  - host: "go-web-app.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        path: "/bar"
        backend:
          service:
            name: go-web-app
            port:
              number: 80801
